<resources>
    <string name="app_name">TendesLocals</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_inici">Home</string>
    <string name="action_map">Mapa</string>
    <string name="txt_opt_sel">\"Option Selected: \"</string>
    <string name="txt_action_inici">Start</string>
    <string name="txt_action_map">Map</string>
    <string name="title_activity_poblacions">Mapa de Pobles</string>
    <string name="title_activity_tendes">Mapa de Tendes</string>
    <string name="title_activity_info_tenda">InfoTendaActivity</string>
    <string name="image_tenda">src_image</string>
    <string name="txtbtn1">Enrerre</string>
    <string name="txtbtn2">Favorit</string>
    <string name="txtbtn3">Entrar</string>
    <string name="txt_lat_lng">Lat/lng:</string>
    <string name="txt_action_shop">Tendes</string>
    <string name="action_info">Informacio</string>
    <string name="action_Shop">Tendes</string>
    <string name="txtInfoHome">Seleccionar \"Mapa\" per a entrar al mapa y seleccionar, afegir o eliminar \"Poblacions\". O cambiar la Poblacio \"Favorita\".\nSeleccionar \"Tendes\" per vore la llista de tendes.</string>
    <string name="txtInfoMap">Per afegir \"Pobles\" com \"Tendes\", mantindre pulsat sobre el mapa en la ubicacio exacte per afegir. Per a cambiar el Poble \"Favorit\" seleccionar el poble i polsar en \"Favorit\".</string>
    <string name="action_citys">Poblacions</string>
    <string name="action_lists">Llistes</string>
    <string name="action_exit">Sortir</string>
    <string name="action_producte">InsertarProducte</string>
    <string name="txt_insertarproducte">Insertar Producte</string>
</resources>
