<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="es.tiendaslocales.MainActivity">

    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/action_inici"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_map"
        android:orderInCategory="100"
        android:title="@string/action_map"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_shop"
        android:orderInCategory="100"
        android:title="@string/action_Shop"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_info"
        android:orderInCategory="100"
        android:title="@string/action_info"
        app:showAsAction="never" />
</menu>
